# workout-tracker

./: .gitignore  README.md  manual_test_schemas.py  pyproject.toml  setup.py  workout-logger.html
api/: main.py
repositories/: local_workout_repository.py  workout_repository.py
shared/: schemas.py
tests/test_repositories/: test_local_repository.py
web/: history.html  index.html
web/css/: styles.css
web/js/: app.js  history.js
